force-app/main/default/objects/Usage_Log__c/Usage_Log__c.object-meta.xml
<CustomObject>
    <description>Stores granular, daily-level usage metrics for each subscription. This object enables the tracking of key performance indicators (KPIs) such as seat utilization and storage consumption. It serves as the data foundation for customer health scoring, automated upsell alerts, and historical trend analysis in the SaaS Sales model.</description>
    <label>Usage Log</label>
    <nameField>
        <displayFormat>UL-{00000}</displayFormat>
        <label>Usage Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>