force-app/main/default/objects/Usage_Log__c/fields/Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Users__c</fullName>
    <description>The total count of unique users who logged into the application on this specific date. This is a key adoption metric to monitor customer health and churn risk.</description>
    <inlineHelpText>Enter the number of unique active users for this day.</inlineHelpText>
    <label>Active Users</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>