force-app/main/default/objects/Usage_Log__c/fields/Storage_Used_GB__c.field-meta.xml
<CustomField>
    <fullName>Storage_Used_GB__c</fullName>
    <description>Total data storage volume consumed by the customer in Gigabytes as of the log date. Used for monitoring capacity limits and potential upsell opportunities.</description>
    <inlineHelpText>Enter the total storage used in Gigabytes (e.g., 5.75).</inlineHelpText>
    <label>Storage Used (GB)</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>