force-app/main/default/objects/Usage_Log__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>Master-Detail relationship linking usage data to its parent subscription. Ensures data integrity through cascade delete and enables roll-up summary fields on the Subscription object.</description>
    <inlineHelpText>Select the subscription that this usage log belongs to.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Usage Logs</relationshipLabel>
    <relationshipName>Usage_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>