force-app/main/default/objects/Usage_Log__c/fields/Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>Usage_Date__c</fullName>
    <description>The specific calendar date for which the usage metrics were recorded. This is the primary time-dimension for historical trend analysis and dashboarding.</description>
    <inlineHelpText>Enter the date when these usage metrics were captured.</inlineHelpText>
    <label>Usage Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>