force-app/main/default/objects/Usage_Log__c/validationRules/Active_Users_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Users_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Ensures that the number of active users cannot be a negative value.</description>
    <errorConditionFormula>Active_Users__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Active_Users__c</errorDisplayField>
    <errorMessage>The number of active users cannot be negative!</errorMessage>
</ValidationRule>