force-app/main/default/objects/Usage_Log__c/validationRules/Active_Users_Must_Be_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Users_Must_Be_Integer</fullName>
    <active>true</active>
    <description>Users can not be decimal numbers.</description>
    <errorConditionFormula>MOD( Active_Users__c ,1) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Active_Users__c</errorDisplayField>
    <errorMessage>Number can not be decimal!</errorMessage>
</ValidationRule>