force-app/main/default/objects/Usage_Log__c/validationRules/Logs_can_not_be_made_when_expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Logs_can_not_be_made_when_expired</fullName>
    <active>true</active>
    <description>Logs can not be added if the subscription is epxired.</description>
    <errorConditionFormula>Subscription__r.Status__c = &quot;Expired&quot;</errorConditionFormula>
    <errorMessage>This Subscription is allready expired. No logs can be added.</errorMessage>
</ValidationRule>