force-app/main/default/objects/Usage_Log__c/validationRules/Usage_Date_Within_Subscription_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Date_Within_Subscription_Period</fullName>
    <active>true</active>
    <description>Ensures that the usage log date is within the subscription validity period.</description>
    <errorConditionFormula>Or (
 Usage_Date__c &lt; Subscription__r.Start_Date__c,
  Usage_Date__c &gt; Subscription__r.End_Date__c 
)</errorConditionFormula>
    <errorDisplayField>Usage_Date__c</errorDisplayField>
    <errorMessage>The usage log date falls outside the subscription period!</errorMessage>
</ValidationRule>